--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=5.6"
+        "php": ">=7.0"
     },
     "require-dev": {
         "phpmd/phpmd" : "~2.3",
@@ -28,6 +28,12 @@
         "psr-4": {
             "Respect\\Validation\\": ["tests/library/"]
         }
+    },
+    "scripts": {
+        "phpcs": "phpcs --standard=PSR2 library",
+        "phpmd": "phpmd library text cleancode,codesize,controversial,design,naming,unusedcode",
+        "phpunit": "phpunit",
+        "quality-assurance": ["@phpcs", "@phpmd", "@phpunit"]
     },
     "extra": {
         "branch-alias": {
