--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,15 @@ language:
   php
 
 php:
-  - 5.6
-  - 7
-  - hhvm
+  - 7.0
 
 before_script:
   - composer self-update
   - composer install --no-interaction --prefer-source
 
 script:
-  - if [[ "5.6" == "${TRAVIS_PHP_VERSION}" ]]; then composer phpcs; fi
-  - if [[ "5.6" == "${TRAVIS_PHP_VERSION}" ]]; then composer phpmd; fi
+  - composer phpcs
+  - composer phpmd
   - composer phpunit
 
 notifications:
