--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "php": ">=7.1",
-        "symfony/polyfill-mbstring": "^1.2"
+        "symfony/polyfill-mbstring": "^1.2",
+        "doctrine/annotations": "^1.5"
     },
     "require-dev": {
         "egulias/email-validator": "^2.0",
